[package]
name = "solana_mint"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_mint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
solana-program = "1.14.16"
winnow = "=0.4.1"
anchor-spl = "0.27.0"
#mpl-token-metadata = "1.11.0"
mpl-token-metadata = { version = "1.11.0", features = ["no-entrypoint"] }
